Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch master
Your branch is up to date with 'origin/master'.

Changes to be committed:
	modified:   CMakeLists.txt
	renamed:    cmake-build-debug/.cmake/api/v1/reply/codemodel-v2-02ff076f856e77c53e42.json -> cmake-build-debug/.cmake/api/v1/reply/codemodel-v2-1654d5fd6e95a32118d8.json
	renamed:    cmake-build-debug/.cmake/api/v1/reply/index-2022-05-20T07-22-27-0512.json -> cmake-build-debug/.cmake/api/v1/reply/index-2022-05-23T03-30-52-0407.json
	renamed:    cmake-build-debug/.cmake/api/v1/reply/target-VolunteerManagementSystem-Debug-47b264f89dc10dea3528.json -> cmake-build-debug/.cmake/api/v1/reply/target-VolunteerManagementSystem-Debug-637809b31b5717ab339f.json
	modified:   cmake-build-debug/.ninja_deps
	modified:   cmake-build-debug/.ninja_log
	modified:   cmake-build-debug/CMakeFiles/VolunteerManagementSystem.dir/main.c.obj
	modified:   cmake-build-debug/CMakeFiles/VolunteerManagementSystem.dir/src/http/GET.c.obj
	modified:   cmake-build-debug/CMakeFiles/VolunteerManagementSystem.dir/src/http/POST.c.obj
	modified:   cmake-build-debug/CMakeFiles/VolunteerManagementSystem.dir/src/http/Routes.c.obj
	modified:   cmake-build-debug/CMakeFiles/VolunteerManagementSystem.dir/src/http/Send.c.obj
	modified:   cmake-build-debug/CMakeFiles/VolunteerManagementSystem.dir/src/volunteer/Crud.c.obj
	modified:   cmake-build-debug/CMakeFiles/VolunteerManagementSystem.dir/src/volunteer/Map.c.obj
	modified:   cmake-build-debug/CMakeFiles/VolunteerManagementSystem.dir/src/volunteer/Volunteer.c.obj
	modified:   cmake-build-debug/Testing/Temporary/LastTest.log
	modified:   cmake-build-debug/VolunteerManagementSystem.exe
	modified:   cmake-build-debug/build.ninja
	deleted:    src/VolunteerInfo.txt
	modified:   src/http/GET.c
	modified:   src/http/POST.c
	modified:   src/http/Send.c
	modified:   src/http/Web.h
	new file:   src/raceInfo.txt
	new file:   src/

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,6 @@ project(VolunteerManagementSystem C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(VolunteerManagementSystem main.c src/http/Web.h src/http/Tool.c src/http/Routes.c src/http/GET.c src/http/POST.c src/http/Send.c src/volunteer/Volunteer.h src/volunteer/Crud.c src/volunteer/Map.c)
+add_executable(VolunteerManagementSystem main.c src/http/Web.h src/http/Tool.c src/http/Routes.c src/http/GET.c src/http/POST.c src/http/Send.c src/volunteer/Volunteer.h src/volunteer/Crud.c src/volunteer/Map.c src/volunteer/volunteer.c)
 
 target_link_libraries(VolunteerManagementSystem ws2_32.lib)
